# trublib

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: api.md  architecture.md  data.md  training.md
models/: scaler.pkl  training_report.json
scripts/: diagnose_features.py  extract_features.py  preprocess_tad_dataset.py  profile_pipeline.py  test_feature.py  train_classifier.py
tad_demo/: app.py
tad_demo/static/: index.html
tests/: conftest.py  test_feature_extractor.py  test_frame_manager.py  test_soft_mask_and_processor.py  test_synthetic.py  test_tad_state_machine.py  test_trumpet_scorer.py
trublib/: __init__.py  config.py  feature_extractor.py  frame_manager.py  normalizer.py  processor.py  soft_mask.py  tad_state_machine.py  trumpet_scorer.py
trublib/models/: trumpet_scorer_v1.onnx
