[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trublib"
version = "0.1.0"
description = "Trumpet Activity Detection (TAD) for real-time audio streams"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Burak Özenç", email = "brk.ozenc@gmail.com" }
]
keywords = [
    "trumpet", "audio", "dsp", "activity-detection",
    "real-time", "onnx", "music", "signal-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soxr>=0.3",
    "onnxruntime>=1.16",
]

[project.urls]
Homepage       = "https://github.com/burak-ozenc/trublib"
Documentation  = "https://github.com/burak-ozenc/trublib/tree/main/docs"
Repository     = "https://github.com/burak-ozenc/trublib"
"Bug Tracker"  = "https://github.com/burak-ozenc/trublib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trublib*"]

[tool.setuptools.package-data]
trublib = ["models/*.onnx", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]